samples/_failures_safe/1761436147_89c2c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_438385eb.c: In function ‘main’:
./samples/SAFE/__tmp_438385eb.c:146:16: error: missing terminating " character
  146 |         printf("Failed to read
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_438385eb.c:146:9: error: expected expression at end of input
  146 |         printf("Failed to read
      |         ^~~~~~
./samples/SAFE/__tmp_438385eb.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_438385eb.c:146:9: error: expected declaration or statement at end of input
